<resources>
    <string name="app_name"></string>
    <string name="title_activity_home">BeerMais</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="save">Salvar</string>
    <string name="add">Adicionar</string>
    <string name="delete">Deletar</string>
    <string name="brand">Marca</string>
    <string name="value">Valor</string>
    <string name="size">Tamanho</string>
    <string name="brandError">Digite uma Marca</string>
    <string name="valueError">Digite um Valor</string>
    <string name="amountError">Digite um Tamanho</string>
    <string name="aboutApp">A ideia desse app nasceu quando 3 amigos estavam fazendo as contas para decidir qual cerveja compesaria comprar para um churrasco. \n\nNão tendo o foco apenas em cerveja, o Beer Mais pode ser usado para calcular o melhor custo-beneficio entre quaisquer bebidas. \n\nA área em verde destaca a bebida de maior custo-beneficio e ordena a lista utilizando do mesmo critério. \n\nÍcones:</string>
    <string name="links">\nhttps://icons8.com\nhttps://www.flaticons.com"</string>
    <string name="version">Versão 1.0.0</string>
</resources>
