<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <TextView
            android:text="Beer Mais"
            android:textColor="@color/colorPrimary"
            android:layout_width="97dp"
            android:layout_height="31dp"
            android:id="@+id/textView7" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="136dp"
            android:layout_marginTop="100dp" app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"/>
    <TextView
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginTop="8dp"
            android:autoLink="all"
            android:text="@string/aboutApp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textSize="18sp"
            app:layout_constraintVertical_bias="0.466"/>
    <TextView
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textColorLink="@color/colorPrimary"
            android:autoLink="all"
            android:text="@string/links"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textSize="18sp"
            app:layout_constraintVertical_bias="0.779" android:layout_marginTop="0px"
    />
    <TextView
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textColorLink="@color/colorPrimary"
            android:autoLink="all"
            android:text="@string/version"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textSize="18sp"
            app:layout_constraintVertical_bias="1.0" android:layout_marginTop="0px"
            app:layout_constraintHorizontal_bias="0.0" android:textAlignment="center"/>
    <ImageView
            android:layout_width="110dp"
            android:layout_height="80dp" app:srcCompat="@mipmap/ic_launcher_about_top"
            tools:layout_editor_absoluteY="74dp" tools:layout_editor_absoluteX="81dp" android:id="@+id/imageView11"/>
</android.support.constraint.ConstraintLayout>